fix(globals.css): increase margin-bottom for legend to enhance spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -351,7 +351,7 @@ legend {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .loading-icon {
